<resources>
    <string name="app_name">FoxFile</string>
    <string name="title_activity_browse">FoxFile</string>

    <string name="fox">Fox</string>
    <string name="file">File Login</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_download">Download</string>
    <string name="action_rename">Rename</string>
    <string name="action_upload">Upload</string>

    <string name="string_username">Username</string>
    <string name="string_password">Password</string>
    <string name="string_login">Login</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_file_viewer">FileViewer</string>

    <string name="icon_ellipsis_v">&#xf142;</string>
    <string name="icon_delete">&#xf014;</string>
    <string name="icon_upload">&#xf093;</string>
    <string name="icon_download">&#xf019;</string>
    <string name="icon_rename">&#xf044;</string>
    <string name="icon_refresh">&#xf021;</string>
    <string name="icon_warning">&#xf071;</string>
    <string name="icon_link">&#xf0c1;</string>

    <string name="icon_folder">&#xf07b;</string>
    <string name="icon_file">&#xf016;</string>
    <string name="icon_zip">&#xf1c6;</string>
    <string name="icon_text">&#xf0f6;</string>
    <string name="icon_code">&#xf1c9;</string>
    <string name="icon_image">&#xf1c5;</string>
    <string name="icon_video">&#xf1c8;</string>
    <string name="icon_audio">&#xf1c7;</string>
</resources>
