<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    style="@style/FoxFile"
    android:id="@+id/login_layout">
    <!--<Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/actionBarSize"
        android:background="@color/background"
        android:theme="@android:style/ThemeOverlay.Material.Dark.ActionBar"
        android:popupTheme="@android:style/ThemeOverlay.Material.Light"
        android:layout_alignParentStart="true" />-->

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_username"
        android:hint="@string/string_username"
        android:layout_marginTop="150dp"
        style="@style/input"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:singleLine="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText_password"
        android:hint="@string/string_password"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/editText_username"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        style="@style/input"
        android:singleLine="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_login"
        android:id="@+id/button_login"
        android:layout_below="@+id/editText_password"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp"
        android:layout_alignParentEnd="true"
        android:onClick="checkUsernameAndPassword"
        style="@style/btn_submit" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/login_title"
        android:layout_marginTop="54dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:gravity="left"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/fox"
            android:id="@+id/textView"
            style="@style/title_fox"
            android:layout_alignBaseline="@+id/editText2"
            android:layout_alignBottom="@+id/editText2"
            android:layout_toStartOf="@+id/textView2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/file"
            android:id="@+id/textView2"
            style="@style/title_file"
            android:layout_marginEnd="76dp"
            android:layout_alignBottom="@+id/editText"
            android:layout_alignParentEnd="true"
            android:layout_weight="0.39" />
    </LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/load_progress"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:secondaryProgressTint="@color/divider"
        android:progressTint="@color/primary"
        android:progressTintMode="src_atop"
        android:secondaryProgressTintMode="src_atop"
        android:visibility="gone"
        android:progressBackgroundTint="@color/primary"
        android:progressBackgroundTintMode="src_atop" />

</RelativeLayout>
